refactor: refactor shouldRefuseTrucoIfMyHandIsWeakAndIWinFirstRound test to use mock